<resources>
    <string name="app_name">LabsCM20182</string>
    <string name="Main_name">Inicio</string>
    <string name="Foods_name">Comidas</string>
    <string name="Drinks_name">Bebidas</string>
    <string name="IconoSplashSreen">SplashScreen</string>
    <string name="INICIO">Inicio</string>
    <string name="IconoSplash_Screen">IconSplash_Screen</string>
    <string name="OPEN">Abrir</string>
    <string name="SAVE">Guardar</string>
    <string name="CLEAR">Limpiar</string>
    <string name="TextVName">Nombre</string>
    <string name="TextVScheduler">Horario</string>
    <string name="TextVType">Tipo</string>
    <string name="TextVTime">Tiempo</string>
    <string name="TextVPrice">Precio</string>
    <string name="TextVIngredients">Ingredientes</string>
    <string name="TextVStarters">Entrada</string>
    <string name="Maindish">Plato fuerte</string>
    <string name="buttonFood">Comidas</string>
    <string name="buttonDrinks">Bebidas</string>
    <string name="CheckBoxMorning">Mañana</string>
    <string name="CheckBoxAfternoon">Tarde</string>
    <string name="CheckBoxNight">Noche</string>
    <string name="Clear">Limpiar</string>
    <string name="Out">Salir</string>
    <string name="Menu">Menu</string>
    <string name="DRINK_OPEN">Abrir</string>
    <string name="DRINK_SAVE">Guardar</string>
    <string name="DRINK_CLEAR">Limpiar</string>
    <string name="TextVNameD">Nombre</string>
    <string name="TextVPriceD">Precio</string>
    <string name="TextVIngredientsD">Ingredientes</string>
    <string name="menu_clear">Limpiar</string>
    <string name="menu_out">Salir</string>
</resources>

