<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodsActivity"
    android:orientation="vertical"
    android:theme="@style/AppTheme">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.280"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9">

                <ImageView
                    android:id="@+id/imageVew_food"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="end|bottom"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <Button
                    android:id="@+id/button_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="onClickImage"
                    android:text="@string/OPEN" />

                <Button
                    android:id="@+id/button_saveF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/SAVE"
                    android:onClick="onClick"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <TextView
                    android:id="@+id/textVew_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/TextVName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <EditText
                    android:id="@+id/ediTex_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="textCapWords"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <TextView
                    android:id="@+id/texVew_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/TextVScheduler"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    tools:ignore="HardcodedText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.38">

                    <CheckBox
                        android:id="@+id/checkBox_morning"
                        android:layout_width="94dp"
                        android:layout_height="match_parent"
                        android:text="@string/CheckBoxMorning"
                        android:textSize="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35">

                    <CheckBox
                        android:id="@+id/checkBox_afternoon"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/CheckBoxAfternoon"
                        android:textSize="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3">

                    <CheckBox
                        android:id="@+id/checkBox_nigth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/CheckBoxNight"
                        android:textSize="10dp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <TextView
                    android:id="@+id/textView_type"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/TextVType"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/options"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton_starers"
                        android:layout_width="136dp"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/TextVStarters" />

                    <RadioButton
                        android:id="@+id/radioButton_main_dish"
                        android:layout_width="136dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50dp"
                        android:checked="true"
                        android:text="@string/Maindish" />
                </RadioGroup>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="98dp"
                    android:layout_height="match_parent"
                    android:onClick="showTimePickerDialog"
                    android:text="@string/TextVTime"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    tools:ignore="OnClick" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="hh/mm/am"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

                <TextView
                    android:id="@+id/textView_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/TextVPrice"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <EditText
                    android:id="@+id/ediText_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="numberDecimal" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7">

                <TextView
                    android:id="@+id/textView_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/TextVIngredients"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <EditText
                    android:id="@+id/ediText_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7">

        <TextView
            android:id="@+id/textView_adds"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>